@@ -53,7 +53,7 @@
         <div class="rel">
           <a href="index.html">Home</a> · 
 <a href="#">Download</a> · 
-<a href="documentation.html">Documentation</a> · 
+<a href="http://hyperspy.org/hyperspy-doc/current/index.html">Documentation</a> · 
 <a href="http://hyperspy.org/hyperspy-doc/dev/examples/index.html">Examples</a> ·
 <a href="news.html">News</a> · 
 <a href="support.html">Support</a> · 
@@ -128,12 +128,12 @@
 <span id="id1"></span><h2>Beta Releases<a class="headerlink" href="#beta-releases" title="Permalink to this headline">¶</a></h2>
 <div class="section" id="windows">
 <h3>Windows<a class="headerlink" href="#windows" title="Permalink to this headline">¶</a></h3>
-<p>The Windows installer for the current 0.5 beta release, can be downloaded using the following links:</p>
-<p><a class="reference external" href="http://pypi.python.org/packages/2.7/h/hyperspy/hyperspy-0.5.win32.exe#md5=78a17b48e8a4563a1129ac685b7524e5">Hyperspy-0.5 beta for Windows 32-bits</a></p>
-<p><a class="reference external" href="http://pypi.python.org/packages/2.7/h/hyperspy/hyperspy-0.5.win-amd64.exe#md5=0f5a4363f532fbe80fabf357d043e2e1">Hyperspy-0.5 beta for Windows 64-bits</a></p>
+<p>The Windows installer for the current 0.5.1 beta release, can be downloaded using the following links:</p>
+<p><a class="reference external" href="http://pypi.python.org/packages/2.7/h/hyperspy/hyperspy-0.5.1.win32.exe#md5=778707c6110ffb2bb58ebd58b663f726">Hyperspy-0.5 beta for Windows 32-bits</a></p>
+<p><a class="reference external" href="http://pypi.python.org/packages/2.7/h/hyperspy/hyperspy-0.5.1.win-amd64.exe#md5=08bbd7da3795856d57976a95df32170d">Hyperspy-0.5 beta for Windows 64-bits</a></p>
 <div class="admonition warning">
 <p class="first admonition-title">Warning</p>
-<p class="last">before installing Hyperspy the <a class="reference external" href="http://hyperspy.org/hyperspy-doc/current/user_guide/install.html#install-dependencies" title="(in Hyperspy v0.5)"><em class="xref std std-ref">the required libraries must be installed</em></a></p>
+<p class="last">before installing Hyperspy the <a class="reference external" href="http://hyperspy.org/hyperspy-doc/current/user_guide/install.html#install-dependencies" title="(in Hyperspy v0.5.1)"><em class="xref std std-ref">the required libraries must be installed</em></a></p>
 </div>
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
@@ -150,7 +150,7 @@
 </div>
 <div class="section" id="ubuntu">
 <h3>Ubuntu<a class="headerlink" href="#ubuntu" title="Permalink to this headline">¶</a></h3>
-<p>An Ubuntu package <a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.5-1_all.deb">can be downloaded here</a>. It is compatible with Ubuntu Precision Pangolin (12.04) or newer.</p>
+<p>An Ubuntu package <a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.5.1-1_all.deb">can be downloaded here</a>. It is compatible with Ubuntu Precision Pangolin (12.04) or newer.</p>
 </div>
 </div>
 <div class="section" id="development-version">
