@@ -53,7 +53,7 @@
         <div class="rel">
           <a href="index.html">Home</a> · 
 <a href="download.html">Download</a> · 
-<a href="documentation.html">Documentation</a> · 
+<a href="http://hyperspy.org/hyperspy-doc/current/index.html">Documentation</a> · 
 <a href="http://hyperspy.org/hyperspy-doc/dev/examples/index.html">Examples</a> ·
 <a href="news.html">News</a> · 
 <a href="support.html">Support</a> · 
@@ -141,7 +141,7 @@ current features and goals of the project.</p>
 </div>
 <div class="section" id="hyperspy-is-very-cool-but-i-want-to-export-the-data-to-analyse-it-with-x-that-is-so-much-cooler-is-it-possible">
 <h2>Hyperspy is very cool, but I want to export the data to analyse it with X that is so much cooler, is it possible?<a class="headerlink" href="#hyperspy-is-very-cool-but-i-want-to-export-the-data-to-analyse-it-with-x-that-is-so-much-cooler-is-it-possible" title="Permalink to this headline">¶</a></h2>
-<p><strong>Answer:</strong> Sure! By default Hyperspy saves the data in HDF5, which is an open standard supported by most data analysis software either by default or via plugins. If your favourite data analysis package does not support HDF5 then you can check if it does support any of the other formats to which Hyperspy can write, see <a class="reference external" href="http://hyperspy.org/hyperspy-doc/current/user_guide/io.html#supported-formats" title="(in Hyperspy v0.5)"><em>Supported formats</em></a>. If X is Gatan&#8217;s Digital Micrograph, which does not support HDF5, you can save to the <a class="reference external" href="http://hyperspy.org/hyperspy-doc/current/user_guide/io.html#ripple-format" title="(in Hyperspy v0.5)"><em>Ripple</em></a> and use the <a class="reference internal" href="download.html#import-rpl"><em>ImportRPL Digital Micrograph plugin</em></a> to read the RPL file.</p>
+<p><strong>Answer:</strong> Sure! By default Hyperspy saves the data in HDF5, which is an open standard supported by most data analysis software either by default or via plugins. If your favourite data analysis package does not support HDF5 then you can check if it does support any of the other formats to which Hyperspy can write, see <a class="reference external" href="http://hyperspy.org/hyperspy-doc/current/user_guide/io.html#supported-formats" title="(in Hyperspy v0.5.1)"><em>Supported formats</em></a>. If X is Gatan&#8217;s Digital Micrograph, which does not support HDF5, you can save to the <a class="reference external" href="http://hyperspy.org/hyperspy-doc/current/user_guide/io.html#ripple-format" title="(in Hyperspy v0.5.1)"><em>Ripple</em></a> and use the <a class="reference internal" href="download.html#import-rpl"><em>ImportRPL Digital Micrograph plugin</em></a> to read the RPL file.</p>
 </div>
 <div class="section" id="digital-micrograph-raises-an-error-when-attempting-to-use-the-si-tool-in-a-spectrum-image-created-by-hyperspy-and-imported-using-the-importrpl-plugin">
 <h2>Digital Micrograph raises an error when attempting to use the SI tool in a spectrum image created by Hyperspy and imported using the ImportRPL plugin<a class="headerlink" href="#digital-micrograph-raises-an-error-when-attempting-to-use-the-si-tool-in-a-spectrum-image-created-by-hyperspy-and-imported-using-the-importrpl-plugin" title="Permalink to this headline">¶</a></h2>
