@@ -53,7 +53,7 @@
         <div class="rel">
           <a href="#">Home</a> · 
 <a href="download.html">Download</a> · 
-<a href="documentation.html">Documentation</a> · 
+<a href="http://hyperspy.org/hyperspy-doc/current/index.html">Documentation</a> · 
 <a href="http://hyperspy.org/hyperspy-doc/dev/examples/index.html">Examples</a> ·
 <a href="news.html">News</a> · 
 <a href="support.html">Support</a> · 
@@ -135,6 +135,7 @@ developed and used in research (see
 <div class="section" id="news">
 <h2>News<a class="headerlink" href="#news" title="Permalink to this headline">¶</a></h2>
 <ul class="simple">
+<li><tt class="docutils literal"><span class="pre">28/09/2012</span></tt> Hyperspy 0.5.1  has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 <li><tt class="docutils literal"><span class="pre">8/09/2012</span></tt> Hyperspy 0.5  has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 <li><tt class="docutils literal"><span class="pre">12/06/2012</span></tt> A new version of ImportRPL has been released. See <a class="reference internal" href="download.html#import-rpl"><em>ImportRPL Digital Micrograph plugin</em></a></li>
 <li><tt class="docutils literal"><span class="pre">16/04/2012</span></tt> Hyperspy 0.4.1  has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
