@@ -59,7 +59,7 @@
         <div class="rel">
           <a href="index.html">Home</a> · 
 <a href="download.html">Download</a> · 
-<a href="documentation.html">Documentation</a> · 
+<a href="http://hyperspy.org/hyperspy-doc/current/index.html">Documentation</a> · 
 <a href="http://hyperspy.org/hyperspy-doc/dev/examples/index.html">Examples</a> ·
 <a href="news.html">News</a> · 
 <a href="support.html">Support</a> · 
