@@ -1,5 +1,6 @@
 News
 ====
+* ``28/09/2012`` Hyperspy 0.5.1  has been released! See :ref:`beta-releases`
 * ``8/09/2012`` Hyperspy 0.5  has been released! See :ref:`beta-releases`
 * ``12/06/2012`` A new version of ImportRPL has been released. See :ref:`import-rpl`
 * ``16/04/2012`` Hyperspy 0.4.1  has been released! See :ref:`beta-releases`
